Moved some webpack-dev-server config to webpack.config.js

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --content-base ./app/static --host 0.0.0.0",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   }
 }
