--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "vue": "^2.3.3"
+    "express": "^4.15.5",
+    "vue": "^2.3.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-hot-middleware": "2.19.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -20,12 +24,11 @@
     "file-loader": "^0.9.0",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
   "scripts": {
     "lint": "eslint .",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "dev": "cross-env NODE_ENV=development node ./server.js",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   }
 }
