--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "dev": "cross-env NODE_ENV=development node ./server.js",
+    "dev": "cross-env NODE_ENV=development node ./app/server.js",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   }
 }
