--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "eslint-plugin-import": "^2.7.0",
     "file-loader": "^0.9.0",
     "vue-loader": "^12.1.0",
-    "vue-template-compiler": "^2.3.3",
-    "webpack-dev-server": "^2.4.5"
+    "vue-template-compiler": "^2.3.3"
   },
   "scripts": {
     "lint": "eslint .",
