--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.15.5",
+    "swagger-tools": "^0.10.1",
     "vue": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "1.12.0",
