--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "eslint-config-airbnb-base": "^12.0.1",
     "eslint-plugin-import": "^2.7.0",
     "file-loader": "^0.9.0",
+    "nodemon": "^1.12.1",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3"
   },
   "scripts": {
     "lint": "eslint .",
-    "dev": "cross-env NODE_ENV=development node ./app/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./app/server.js",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "start": "cross-env NODE_ENV=production node ./app/server.js"
   }
