--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "axios": "0.16.2",
     "express": "^4.15.5",
     "swagger-tools": "^0.10.1",
     "vue": "^2.3.3",
